--- a/rcliberty.Web/Views/Home/Index.cshtml
+++ b/rcliberty.Web/Views/Home/Index.cshtml
@@ -4,12 +4,12 @@
 
 <div class="clearfix"></div>
 
-@if (ViewBag.EmailConfirmation != null)
+@*@if (ViewBag.EmailConfirmation != null)
 {
     <div id="rc-connect-success" class="alert-success">
         <p>@ViewBag.EmailConfirmation</p>
     </div>
-}
+}*@
 
 <div id="rc-main-slider" class="carousel slide" data-ride="carousel">
     <!-- indicator icons -->
@@ -28,8 +28,7 @@
         </div>
 
         <div class="item active">
-            @*<img src="~/Content/img/who-am-i-banner.jpg" alt="Current Series" style="width:100%;">*@
-            <img src="~/Content/img/ultimate-protection-banner.jpg" alt="Current Series" class="image">
+            <img src="~/Content/img/battle-storm-banner.jpg" alt="Current Series" class="image">
             <div class="overlay">
                 <div class="overlay-text">
                     Current Series
