--- a/rcliberty.Web/Views/Home/Media.cshtml
+++ b/rcliberty.Web/Views/Home/Media.cshtml
@@ -11,6 +11,6 @@
     <div class="col-md-4">
         <h2>@item.Name</h2>
         <p>@item.Id</p>
-        <img class="series-img" src="~/Content/img/series/@item.Image" />
+        <img class="series-img" src="~/Content/img/!test/@item.Image" />
     </div>
 }
