--- a/rcliberty.Web/Views/UsersAdmin/Index.cshtml
+++ b/rcliberty.Web/Views/UsersAdmin/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Account/User Management";
 }
 
-<h2>@ViewBag.Title</h2>
+<h1 class="admin-header">@ViewBag.Title</h1>
 
 <p>
-    @Html.ActionLink("Add a New User", "Create")
+    @Html.ActionLink("Add a New User", "Create", null, new { @class = "btn btn-default admin-create-btn" })
 </p>
 <table class="table">
     <tr>
