updated UTC time logic, adjusted text on theCapitol "ministries" section

--- a/rcliberty.Web/Views/Home/Ministries.cshtml
+++ b/rcliberty.Web/Views/Home/Ministries.cshtml
@@ -46,7 +46,7 @@
                 <img id="rc-capitol-logo" src="~/Content/img/theCapitol-logo.png" />
             </div>
             <p>
-                For our jr. high &amp; high school age students, we welcome them to <span class="emphasis">theCapitol</span>. We are dedicated to providing a place for them to connect with God, other students, and older leaders who serve faithfully to see students grow closer to Christ. theCapitol meets every 1st &amp; 3rd Sunday night at the RC Liberty campus.
+                For our jr. high &amp; high school age students, we welcome them to <span class="emphasis">theCapitol</span>. We are dedicated to providing a place for them to connect with God, other students, and older leaders who serve faithfully to see students grow closer to Christ. theCapitol <strong>meets every 1st &amp; 3rd Sunday night @Html.Raw("@") 6pm </strong>at the RC Liberty campus.
             </p>
         </div>
     </div>
